@@ -54,6 +54,7 @@ CVS			+ Added the ability to serve and manage text ads  (Niels, 2002-07-29)
 			  - 2002-08-26:  Fixed problem when using adpopup to show HTML banners with embedded Javascript code  (Niels, thanks to Philip Hofstetter)
 			  - 2002-08-30:  Added single quotes when using ids in queries, to prevent exploits on non-mysql platforms  (Matteo)
 			  - 2002-08-31:  Fixed compatibility with delivering banners on a SSL enabled website  (Niels)
+			  - 2002-08-31:  Rewrote part of the upload handling, for better compatibility (untested)  (Niels)
 
 
 
